--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-location": "^3.1000.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
